# freerdp-integration

./: .gitignore  Cargo.toml
docs/: [MS-RDPESC].md  gids.md  iso7816-4-relevant-rules.md  sc-minidriver_specs_v7.07.md  windows-smartcard-analysis.md
docs/findings/: windows-smartcard-architecture.md
freerdp-sys/: build.rs  wrapper.h
freerdp-sys/src/: lib.rs
freerdp-sys/src/shims/: get_access_token_wrapper.c
plan/: euds_architecture.md  euds_engine_spec.md  euds_technical_spec.md  futures.md  master_plan.md  multi_ia_review_consolidated.md
rdp/: Cargo.toml  REFERENCE.md  build.rs
rdp/src/: consts.rs  context.rs  events.rs  geom.rs  init.rs  lib.rs  messaging.rs  settings.rs  sys.rs  windows_types.rs  wlog.rs
rdp/src/addins/: addin.rs  audio_input.rs  audio_output.rs  mod.rs  smartcard.rs
rdp/src/addins/smartcard/: consts.rs  device.rs  handlers.rs  mod.rs
rdp/src/addins/webcam/: channel.rs  listener.rs  mod.rs  pdu.rs
rdp/src/callbacks/: altsec.rs  altsec_c.rs  channels.rs  channels_c.rs  entrypoint.rs  entrypoint_c.rs  graphics.rs  graphics_c.rs  input.rs  input_c.rs  instance.rs  instance_c.rs  mod.rs  pointer_update.rs  pointer_update_c.rs  primary.rs  primary_c.rs  secondary.rs  secondary_c.rs  update.rs  update_c.rs  window.rs  window_c.rs
rdp/src/channels/: disp.rs  gfx.rs  mod.rs  rail.rs
rdp/src/channels/cliprdr/: callbacks_c.rs  (+2 more)
rdp/src/connection/: builder.rs  mod.rs
rdp/src/integrations/: audio_input.rs  audio_output.rs  clipboard.rs  mod.rs  smartcard.rs  webcam.rs
rdp/src/utils/: graphics.rs  log.rs  mod.rs  ptr.rs  trigger.rs
(+11 files in other folders)
