[workspace]
members = [
    "freerdp-sys",
    "rdp",
]
resolver = "3"

[workspace.package]
version = "5.0.0"
edition = "2024"
authors = ["Adolfo Gómez <dkmaster@dkmon.com>"]
license = "BSD-3-Clause"

[workspace.dependencies]
# Build dependencies
bindgen = "0.72"
cc = "1.2"
glob = "0.3"

# Bitflags (Windows WS_*/WS_EX_* constants)
bitflags = "2.9"

# Core dependencies
anyhow = "1.0"
flume = { version = "0.12", features = ["async"] }
tracing = "0.1"
zeroize = { version = "1.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

# OS / Platform dependencies
libc = "0.2"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Security_Cryptography",
    "Win32_System_JobObjects",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Networking_WinSock",
] }
